--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/resources/css/reset.css" >
+    <link rel="stylesheet" href="/resources/css/style.css" >
+    <title>Excursion</title>
 </head>
 <body>
-    
+    <header>
+        <h1></h1>
+    </header>
 </body>
 </html>
