--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/resources/css/reset.css" >
-    <link rel="stylesheet" href="/resources/css/style.css" >
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <title>Excursion</title>
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Discover hidden places in the world around you</h1>
+        <p>Download Excursion (Coming Soon!)</p>
     </header>
-</body>
+    <div class="main-content">
+        <div class="video-container">
+            <video autoplay muted>
+                <source src="./resources/videos/excursion.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div class="travel-guide">
+            <div class="travel-heading">
+                <h2>Your personal travel guide</h2>
+                <span>Excursion remembers places you like, and recommends new points of interest around you</span>
+            </div>
+            <div class="image-container">
+                <img src="./resources/images/camp.jpg" alt="">
+            </div>
+            <div class="image-container">
+                <img src="./resources/favicon/phone.png">
+            </div>
+            <div class="travel-down">
+                <h1>Coming soon for iPhone and Android</h1>
+                <p>Download Excursion (Coming Soon!)</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p><span>&copy;</span>Excursion</p>
+    </footer>
+</body
 </html>
